@startuml
!include ../style.puml
skinparam arrowThickness 1.1

class CommandRunner LOGIC_COLOR {
    - isRunning : boolean
    - skuList : SKUList
    + CommandRunner(skuList : SKUList)
    + isRunning() : boolean
    + run(cmd : ParsedCommand) : void
    - handleAddSku(cmd : ParsedCommand) : void
    - handleDeleteSku(cmd : ParsedCommand) : void
    - handleEditSku(cmd : ParsedCommand) : void
    - handleAddSkuTask(cmd : ParsedCommand) : void
    - handleEditTask(cmd : ParsedCommand) : void
    - handleDeleteTask(cmd : ParsedCommand) : void
    - handleMarkTask(cmd : ParsedCommand) : void
    - handleUnmarkTask(cmd : ParsedCommand) : void
    - handleListTasks(cmd : ParsedCommand) : void
    - handleFind(cmd : ParsedCommand) : void
    - handleExport() : void
    - saveState() : void
    - findSku(skuId : String) : SKU
    - matchesDescription(task : SKUTask, descFilter : String) : boolean
    - parseIndex(indexStr : String) : int
}

class ParsedCommand MODEL_COLOR {
    + getCommandWord() : String
    + getArg(key : String) : String
    + hasArg(key : String) : boolean
}

class SKUList MODEL_COLOR {
    + getSKUList() : List<SKU>
    + addSKU(skuId : String, location : Location) : void
    + deleteSKU(skuId : String) : void
}

class SKU MODEL_COLOR_T1 {
    + getSKUID() : String
    + getSKUTaskList() : SKUTaskList
    + setLocation(location : Location) : void
}

class SKUTaskList MODEL_COLOR_T2 {
    + addSKUTask(skuId : String, priority : Priority, dueDate : String, desc : String) : void
    + deleteSKUTaskByIndex(index : int) : void
    + editSKUTask(index : int, date : String, priority : Priority, desc : String) : void
    + markTask(index : int) : void
    + unmarkTask(index : int) : void
    + getSKUTaskList() : ArrayList<SKUTask>
    + getSize() : int
    + isEmpty() : boolean
}

class SKUTask MODEL_COLOR_T3 {
    + isDone() : boolean
    + getSKUTaskDescription() : String
    + getSKUTaskID() : String
}

class ViewSKUTask LOGIC_COLOR_T1 {
    + setSkuFilter(n : String) : void
    + setPriorityFilter(p : String) : void
    + setLocationFilter(l : String) : void
    + listTasks(skuList : SKUList) : List<SKUTask>
    + calculateDistance(task : SKUTask, l : String, skuList : SKUList) : int
}

class Storage LOGIC_COLOR_T1 {
    + {static} saveState(skuList : SKUList) : void
    + {static} loadState(skuList : SKUList) : void
}

class Ui UI_COLOR {
    + {static} printSuccess(msg : String) : void
    + {static} printError(msg : String) : void
    + {static} printHelp() : void
    + {static} printGoodbye() : void
}

CommandRunner -down-> "1" SKUList : skuList
CommandRunner ..> ParsedCommand : uses
CommandRunner ..> SKU : uses
CommandRunner ..> SKUTask : uses
CommandRunner ..> ViewSKUTask : uses
CommandRunner ..> Storage : uses
CommandRunner ..> Ui : uses
SKUList -down-> "*" SKU : skuList
SKU -down-> "1" SKUTaskList : skuTaskList
SKUTaskList -down-> "*" SKUTask : taskList

@enduml